--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-patreon: underewarrr # Replace with a single Patreon username
+patreon: underewar # Replace with a single Patreon username
